resolves problems validator complains about

--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -59,7 +59,7 @@
             <input type="search" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
 
             <button type="submit" aria-label="Klicka här för att söka" class="button"><i class="fas fa-search"></i>
-                Sök</a></button>
+                Sök</button>
         </form>
     </div>
     <main class="makeBodyMoreNarrow">
@@ -130,7 +130,7 @@
                 </h3>
                 <br />
                 <p>
-                    Ring vår växel <a href="tel:010-209 01 00">010-209 01 00</a> så hjälper vi dig med ditt
+                    Ring vår växel <a href="tel:010-2090100">010-209 01 00</a> så hjälper vi dig med ditt
                     ärende!
                 </p>
                 <p>
@@ -304,7 +304,7 @@
         <div id="map">
             <iframe
                 src="https://maps.google.se/maps/ms?msa=0&amp;msid=208106955202648480291.0004b2df7f01bd721b100&amp;ie=UTF8&amp;t=m&amp;vpsrc=6&amp;ll=58.813742,14.194336&amp;spn=9.11878,20.610352&amp;z=5&amp;output=embed"
-                width="70%" height="450vh" title="karta med våra besöksadresser">
+                 title="karta med våra besöksadresser" class="mapDimen">
             </iframe>
 
         </div>
