ops... missed one heh

--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -56,7 +56,7 @@
         </nav>
         <form>
             <label for="searchField">Sök</label>
-            <input type="search" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
+            <input id="searchField" type="search" aria-label="Ange söktext här" placeholder="Sök på webbplatsen" />
 
             <button type="submit" aria-label="Klicka här för att söka" class="button"><i class="fas fa-search"></i>
                 Sök</button>
